# ai-zc-2025

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/commands/: add-week.md
week1/: CLAUDE.md  homework.md  prompt-log.md
week1/todo/: models.py  tests.py  views.py
week1/todo/migrations/: 0001_initial.py
week1/todoproject/: settings.py  urls.py
week1/todoproject/templates/: base.html  home.html
week1/todoproject/templates/todo/: create.html  delete.html  edit.html  list.html
week2/: CLAUDE.md  homework.md  q1-prompt-log.md  references.md
week2/coding-interview-platform/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  q2-prompt-log.md
week2/coding-interview-platform/backend/: .gitignore  README.md  package-lock.json  package.json  server.js
week2/coding-interview-platform/backend/integration-tests/: README.md  api.test.js  jest.config.js  package-lock.json  package.json  websocket.test.js
week2/coding-interview-platform/docs/: README.md  openapi.yaml
week2/coding-interview-platform/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
week2/coding-interview-platform/frontend/integration-tests/: README.md  package-lock.json  package.json  playwright.config.js
week2/coding-interview-platform/frontend/integration-tests/tests/: code-editing.spec.js  realtime-collaboration.spec.js  session-creation.spec.js
week2/coding-interview-platform/frontend/src/: App.jsx
week3/: homework.ipynb  main.py  search.py  test.py
(+6 files in other folders)
