[project]
name = "ai-zc-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "django>=5.2.8",
    "fastmcp>=2.14.2",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "tqdm>=4.67.1",
]
